# shift-rl-sim

./: README.md  Scenarios.txt  VMs.txt  requirements.txt
agents/: .gitignore  cmake.sh
agents/AutomatedMarketMaker/: check_lob.py  dbchanges.py
agents/AutomatedMarketMaker/Experiments/: Orderbook_trialAMM_CS1.csv
agents/DemoClient/: CMakeLists.txt
agents/DemoClient/src/: demo_01.cpp  demo_02.cpp  demo_03.cpp  demo_04.cpp  demo_05.cpp  demo_06.cpp  demo_07.cpp
agents/InitializationProgram/: CMakeLists.txt
agents/InitializationProgram/include/: DBConnector.h
agents/InitializationProgram/src/: DBConnector.cpp  main.cpp
agents/MACDTrader/: CMakeLists.txt  batch.sh  batch2.sh  batch3.sh
agents/MACDTrader/include/: MACDTrader.h
agents/MACDTrader/src/: MACDTrader.cpp  main.cpp
agents/MarketMaker/: CMakeLists.txt  batch.sh
agents/MarketMaker/src/: main.cpp
agents/ObserverClient/: batch.sh
agents/ObserverClient/src/: main.cpp
agents/RegimeSwitcher/: batch.sh  regime_log.txt
agents/RegimeSwitcher/src/: main.cpp
agents/RhoTrader/: CMakeLists.txt  batch.sh
agents/RhoTrader/include/: RhoTrader.h
agents/RhoTrader/src/: RhoTrader.cpp  main.cpp
agents/Scripts/: ZI_initi_run.sh  agent_entries.sh  competition_entries.sh  regime.sh  regime.sh.bkp  simulate_market_making.sh  vscode_init.sh
agents/Scripts/vscode/: c_cpp_properties.json
agents/SingleOrderTrader/: CMakeLists.txt  batch.sh  batch2.sh
agents/SingleOrderTrader/src/: main.cpp
agents/TestClient/: CMakeLists.txt
agents/TestClient/src/: main.cpp
agents/ZITrader/: CMakeLists.txt  batch.sh  batch2.sh  batch_ultimate.sh
agents/ZITrader/include/: ZITrader.h
agents/ZITrader/src/: ZITrader.cpp  main.cpp
agents/lagtesting/: initiator.cfg  main.py  samplefunc.py
env_setup/: new_agents.sh  setup.sh  test_env.py
rl/: .gitignore  README.md  automate.sh  test.csv
rl/Backtesting/DB_interface/: Data.py  DataReader.py
rl/Backtesting/DB_interface/data/: Adj Close.csv  Close.csv  DJI.csv  DJI_p.csv  High.csv  Low.csv  Open.csv  Volume.csv
rl/Backtesting/Engine/: engine.py  statistics.py
rl/RL_with_ZI/: RL.py  initiator.cfg  initiator2.cfg  ppo_parellel.py  rl_ppo.py  test_LOB.py  thread_multi.py  zi_generator.py
rl/RL_with_ZI/Policies/dqn/: events.out.tfevents.1670471058.algotrading.30191.0  events.out.tfevents.1670471058.algotrading.30191.1  events.out.tfevents.1678254605.algotrading.3515.0  events.out.tfevents.1679369773.SHIFT_CLONE_05.13671.0  events.out.tfevents.1679428385.SHIFT_CLONE_05.16047.0  policy1.pth  policy2.pth  policy3.pth  policy_ppo1.pth  policy_ppo_trader1.pth  withZIPolicy1.pth
rl/RL_with_ZI/Policies/ppo/: policy1.pth  policy_ppo_trader1.pth  policy_ppo_traderlt1.pth  policy_ppo_traderlt10.pth  policy_ppo_traderlt2.pth  policy_ppo_traderlt5.pth  policy_ppo_traderlt7.pth  policy_ppo_tradermm1.pth  policy_ppo_tradermm2.pth  policy_ppo_tradermm3.pth  policy_ppo_tradermm4.pth  policy_ppo_tradermm5.pth  policylt2.pth  policylt5.pth  policylt8.pth  policylt9.pth  policymm2.pth  policymm5.pth
rl/RL_with_ZI/comp23_MM/: Comp_rl_mm.py  initiator.cfg
rl/RL_with_ZI/comp23_MM/iteration_info/: sep_trader_mm2.csv
rl/RL_with_ZI/iteration_info/: sep_trader_lt4.csv  sep_trader_lt5.csv  sep_trader_mm1.csv  sep_trader_mm2.csv
rl/RL_with_ZI/simulation_scripts/: ZI_initi_run.sh  initial_sim.sh  rl_test.sh
rl/SHIFT/: PortfolioValue.py  SHIFT_env.py
rl/SHIFT/notebooks/: initiator.cfg
rl/SHIFT/notebooks/demos/: Demo_xiaoyu.ipynb  Demo_yuqi.ipynb  Demo_zhixian.ipynb  Demo_zhiyuan.ipynb  initiator.cfg
rl/visual/exp/diff_gamma/: plot.py
rl/visual/exp/exec_one_asset/: plot-Copy1.ipynb  plot.ipynb
scripts/: automate.sh  main.sh
simulation/: F_RL_env_mm.py  LOB_record.py  README.md  RL_env.py  RL_env_mm_split_step.py  Simple_strat_sim.py  Two_RL_env_lt.py  Two_RL_env_mm.py  _Agents_analysis.py  _Market_analysis.py  action_patterns.py  action_patterns_mm.py  db_config.py  diff_ppo.py  down_states.csv  dqn_sim.py  initiator2.cfg  installation.md  local_orderbook_watcher.py  loop_ppo.sh  lt_action_patterns.py  lt_rl.py  lt_rl_env.py  market_stats.ipynb  market_stats.py  mult_env_test.py  ppo_parallel.py  ppo_parallel2.py  ppo_parellel.py  ppo_sim.py  pull_trading_volume.py  realistic_csv_converter.ipynb  rl_0_compare.ipynb  rl_dqn.py  shared_policy.py  sim_utils.py  sims_analysis.ipynb  sims_analysis_temp.ipynb  sims_analysis_zhiyuan.ipynb  sims_flash_analysis.ipynb  (+12 more)
simulation/Main_data/non_train/0/: config.json  flash_orders.csv
simulation/Main_data/non_train/1/: config.json  flash_orders.csv
simulation/Main_data/zi/: 0.csv  1.csv  2.csv  3.csv
simulation/Policies/dqn/: checkpoint.pth  events.out.tfevents.1678254502.algotrading.31584.0  events.out.tfevents.1678469003.algotrading.1522.0  events.out.tfevents.1679344777.algotrading.14070.0  events.out.tfevents.1679346663.algotrading.19221.0  events.out.tfevents.1679362392.SHIFT_CLONE_05.5406.0  policy.pth  policy_ppo01_size.pth  policy_ppo6Hours.pth  policy_ppo_trader2.pth  policy_ppo_trader3.pth
simulation/Policies/ppo/: policy_ppo_traderlt3.pth  policy_ppo_traderlt4.pth  policy_ppo_traderlt6.pth  policy_ppo_traderlt8.pth  policy_ppo_traderlt9.pth  policylt1.pth  policylt10.pth  policylt3.pth  policylt4.pth  policylt6.pth  policylt7.pth  policymm1.pth  policymm3.pth  policymm4.pth
simulation/comp23_MM/: Comp_rl_ppo.py
simulation/comp23_MM/iteration_info/: Orders_info_sep_trader_mm1.csv  Orders_info_sep_trader_mm2.csv  sep_trader_mm1.csv
simulation/iteration_info/: Orders_info_sep_trader_mm1.csv  Orders_info_sep_trader_mm2.csv  sep_trader_lt1.csv  sep_trader_lt2.csv  sep_trader_lt3.csv
simulation/old_setup_files/: old_F_RL_env_mm.py  old_lt_rl_env.py  old_ppo_parallel.py
simulation/rl_0_compare/: sep_trader_mm1_origin.csv  sep_trader_mm1_origin2.csv  sep_trader_mm1_origin_1000.csv  sep_trader_mm1_test.csv  sep_trader_mm1_test_1000.csv
simulation/simulation_scripts/: ZI_initi_run.sh  agent_entries.sh  automate.sh  initial_sim.sh  local_automate.sh  new_agents.sh  run_agent.sh
tools/: logger.py  test_logger.py
(+1985 files in other folders)
